dev/argocd.yml
apiVersion: v1
kind: Service
metadata:
  name: argocd
spec:
  ports:
    port: 20000

---
apiVersion: v1
kind: Endpoints
metadata:
  name: argocd
subnets:
  - addresses:
      - ip: 192.168.0.2
  ports:
    - port: 80
