dev/jenkins.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  type: ExternalName
  externalName: 192.168.0.2
