dev/port-foward.yml
apiVersion: v1
kind: Service
metadata:
  name: port-forward
spec:
  type: ExternalName
  externalName: 192.168.0.2
